fixing small issue with text alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -230,6 +230,10 @@ html:not(.wf-doc) {
     }
 }
 
+.tabsh-text {
+    max-width: 16ch;
+}
+
 .w-tabs {
     @media (max-width: 768px) {
         display: flex;
